--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -219,11 +219,12 @@
           <p>A Chen Luohan Site, Made with 10% sanity, 90% love.</p>
         </div>
         <div class="column">
+          <p>Site Credits:</p>
           <ul>
-            <li>Icon Credit</li>
-            <li>Icon Credit</li>
-            <li>Icon Credit</li>
-            <li>Icon Credit</li>
+            <li>play icon from icons8</li>
+            <li>high-volume icon from icons8</li>
+            <li>low-volume icon from icons8</li>
+            <li>fullscreen icon from icons8</li>
           </ul>
         </div>
       </div>
