updated website title2

--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -20,7 +20,7 @@
       <a href="#">Home</a>
       <a href="#">Blog</a>
       <header>
-        <h1>InteractiveCrafts</h1>
+        <h1>InteractiveCrafts!</h1>
       </header>
       <a href="#">Watch</a>
       <a href="#">Contact</a>
