--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -26,6 +26,14 @@
       <a href="#">Contact</a>
     </nav>
 
+    <div class="sitemap">
+      <a href="#">Crafts</a>
+      <p>></p>
+      <a href="#">DIY</a>
+      <p>></p>
+      <a href="#">Handheld Windmill</a>
+    </div>
+
     <div class="video-container">
       <div class="title">
         <h1>Watch: How to make DIY handheld windmills:</h1>
