added fast forward and rewind button

--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -65,6 +65,26 @@
                 height="16"
               />
             </button>
+
+            <button id="return-backward-button">
+              <img
+                id="return-backward-img"
+                src="https://img.icons8.com/?size=100&id=91641&format=png&color=000000"
+                alt="return backwards button"
+                width="24"
+                height="24"
+              />
+            </button>
+
+            <button id="fast-forward-button">
+              <img
+                id="fast-forward-img"
+                src="https://img.icons8.com/?size=100&id=geMzsop3XLTL&format=png&color=000000"
+                alt="Skip Forward Button"
+                width="20"
+                height="20"
+              />
+            </button>
           </div>
 
           <div class="right">
@@ -73,8 +93,8 @@
                 id="decrease-volume-img"
                 src="https://img.icons8.com/ios-glyphs/30/low-volume.png"
                 alt="Decrease Volume Button"
-                width="16"
-                height="16"
+                width="20"
+                height="20"
               />
             </button>
 
