--- a/week10/hover/index.html
+++ b/week10/hover/index.html
@@ -10,11 +10,14 @@
       href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Space+Grotesk&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="../reset.css" />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
   <body>
-    <h1>Hover</h1>
+    <div class="outer">
+      <img src="../cat.png" alt="cat" id="cat-img" />
+      <div class="inner" id="more-info"><p>More about me</p></div>
+    </div>
   </body>
 </html>
