added more week 10 lesson content

--- a/week10/scroll/index.html
+++ b/week10/scroll/index.html
@@ -14,13 +14,5 @@
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
-  <body>
-    <div class="outer">
-      <button id="cat-button">
-        <img src="../cat.png" alt="cat" />
-      </button>
-      <img src="../heart.png" alt="heart" id="heart-icon" />
-      <p>Total Likes: <span id="likes">0</span></p>
-    </div>
-  </body>
+  <body></body>
 </html>
