--- a/week10/dropdown/index.html
+++ b/week10/dropdown/index.html
@@ -15,12 +15,13 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <div class="outer">
-      <button id="cat-button">
-        <img src="../cat.png" alt="cat" />
-      </button>
-      <img src="../heart.png" alt="heart" id="heart-icon" />
-      <p>Total Likes: <span id="likes">0</span></p>
-    </div>
+    <header>
+      <button id="profile-button">My Account</button>
+      <div id="profile-content">
+        <a href="">Settings</a>
+        <a href="">Details</a>
+        <a href="">Log out</a>
+      </div>
+    </header>
   </body>
 </html>
