--- a/week10/navigate/index.html
+++ b/week10/navigate/index.html
@@ -15,12 +15,22 @@
     <script src="script.js" defer></script>
   </head>
   <body>
+    <header id="top">
+      This is a header
+      <a href="#bottom">go to bottom</a>
+      <a href="https://www.abc.net.au/">go to ABC news</a>
+    </header>
     <div class="outer">
-      <button id="cat-button">
-        <img src="../cat.png" alt="cat" />
-      </button>
-      <img src="../heart.png" alt="heart" id="heart-icon" />
-      <p>Total Likes: <span id="likes">0</span></p>
+      <button id="footer-button">go to footer</button>
     </div>
+    <div class="outer">Cover page</div>
+    <div class="outer">Projects</div>
+    <div class="outer">Resume</div>
+    <div class="outer">Testimonials</div>
+    <div class="outer" id="contact">Contact</div>
+    <footer id="bottom">
+      This is a footer
+      <a href="#top">go to top</a>
+    </footer>
   </body>
 </html>
