--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -8,5 +8,66 @@
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <!-- Needed functionalities (HTML):
+   Site title, Navbar, cookie grid, fortune page, return button, footer -->
+  <body>
+    
+    <nav>
+      <h2>Fortuna</h2>
+      <button id="random">Pick one for me!</button>
+      </ul>
+    </nav>
+
+    <div class="cookies">
+      <div class="row">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+      </div>
+      <div class="row">
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+      </div>
+      <div class="row">
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+      </div>
+      <div class="row">
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+      </div>
+      <div class="row">
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+      </div>
+      <div class="row">
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+      </div>
+    </div>
+
+  </body>
 </html>
