--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../reset.css" />
+    <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   </head>
   <!-- Needed functionalities (HTML):
    Site title, Navbar, cookie grid, fortune page, return button, footer -->
@@ -18,7 +19,18 @@
       </ul>
     </nav>
 
-    <div class="cookies">
+    <div id="canvas">
+      <div class="row">
+        <!-- COLLECTION: Twemoji Emojis
+LICENSE: MIT License
+AUTHOR: Twitter -->
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+      </div>
       <div class="row">
         <img src="fortune-cookie-svgrepo-com.svg" class="column">
         <img src="fortune-cookie-svgrepo-com.svg" class="column">
@@ -28,44 +40,36 @@
         <img src="fortune-cookie-svgrepo-com.svg" class="column">
       </div>
       <div class="row">
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
       </div>
       <div class="row">
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
       </div>
       <div class="row">
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
       </div>
       <div class="row">
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
-      </div>
-      <div class="row">
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
-        <div class="column">REPLACE WITH FORTUNE COOKIE</div>
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
+        <img src="fortune-cookie-svgrepo-com.svg" class="column">
       </div>
     </div>
 
