assignment 3 progress...so hard...

--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -19,59 +19,46 @@
       </ul>
     </nav>
 
-    <div id="canvas">
-      <div class="row">
-        <!-- COLLECTION: Twemoji Emojis
-LICENSE: MIT License
-AUTHOR: Twitter -->
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-      </div>
-      <div class="row">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-      </div>
-      <div class="row">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-      </div>
-      <div class="row">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-      </div>
-      <div class="row">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-      </div>
-      <div class="row">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-        <img src="fortune-cookie-svgrepo-com.svg" class="column">
-      </div>
+    <body>
+      <div class="canvas">
+          <div class="draggable-container">
+  <div class="row">
+    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
+    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
+    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
+    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
+    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
     </div>
+    <div class="row">
+    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
+    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
+    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
+    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
+    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
+    </div>
+    <div class="row">
+    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
+    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
+    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
+    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
+    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
+    </div>
+    <div class="row">
+    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
+    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
+    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
+    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
+    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
+    </div>
+    <div class="row">
+    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
+    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
+    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
+    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
+    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
+    </div>
+          </div>
+      </div>
 
   </body>
 </html>
