assignment 3 progress day 2

--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -7,58 +7,29 @@
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   </head>
   <!-- Needed functionalities (HTML):
    Site title, Navbar, cookie grid, fortune page, return button, footer -->
   <body>
-    
-    <nav>
-      <h2>Fortuna</h2>
-      <button id="random">Pick one for me!</button>
-      </ul>
-    </nav>
+    <!-- <div id="card-container" data-mouse-down-at="0" data-prev-percentage="0">
+      <img class="card" src="https://images.unsplash.com/photo-1524781289445-ddf8f5695861?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" draggable="false" />
+      <img class="card" src="https://images.unsplash.com/photo-1610194352361-4c81a6a8967e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1674&q=80" draggable="false" />
+      <img class="card" src="https://images.unsplash.com/photo-1618202133208-2907bebba9e1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" draggable="false" />
+      <img class="card" src="https://images.unsplash.com/photo-1524781289445-ddf8f5695861?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" draggable="false" />
+      <img class="card" src="https://images.unsplash.com/photo-1610194352361-4c81a6a8967e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1674&q=80" draggable="false" />
+      <img class="card" src="https://images.unsplash.com/photo-1618202133208-2907bebba9e1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" draggable="false" />
+    </div> -->
 
-    <body>
-      <div class="canvas">
-          <div class="draggable-container">
-  <div class="row">
-    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
-    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
-    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
-    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
-    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
-    </div>
-    <div class="row">
-    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
-    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
-    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
-    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
-    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
-    </div>
-    <div class="row">
-    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
-    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
-    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
-    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
-    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
-    </div>
-    <div class="row">
-    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
-    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
-    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
-    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
-    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
-    </div>
-    <div class="row">
-    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
-    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
-    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
-    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
-    <button><img src="fortune-cookie-svgrepo-com.svg" class="column"></button>
-    </div>
-          </div>
+    <div class="gallery">
+      <div class="gallery__prev"></div>
+      <div class="gallery__next"></div>
+      <div class="gallery__stream">
+        <div class="gallery__item bg-1"></div>
+        <div class="gallery__item bg-2"></div>
+        <div class="gallery__item bg-3"></div>
+        <div class="gallery__item bg-4"></div>
+        <div class="gallery__item bg-5"></div>
       </div>
-
+    </div>
   </body>
 </html>
