--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -8,27 +8,23 @@
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
-  <!-- Needed functionalities (HTML):
-   Site title, Navbar, cookie grid, fortune page, return button, footer -->
-  <body>
-    <!-- <div id="card-container" data-mouse-down-at="0" data-prev-percentage="0">
-      <img class="card" src="https://images.unsplash.com/photo-1524781289445-ddf8f5695861?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" draggable="false" />
-      <img class="card" src="https://images.unsplash.com/photo-1610194352361-4c81a6a8967e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1674&q=80" draggable="false" />
-      <img class="card" src="https://images.unsplash.com/photo-1618202133208-2907bebba9e1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" draggable="false" />
-      <img class="card" src="https://images.unsplash.com/photo-1524781289445-ddf8f5695861?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" draggable="false" />
-      <img class="card" src="https://images.unsplash.com/photo-1610194352361-4c81a6a8967e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1674&q=80" draggable="false" />
-      <img class="card" src="https://images.unsplash.com/photo-1618202133208-2907bebba9e1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" draggable="false" />
-    </div> -->
 
-    <div class="gallery">
-      <div class="gallery__prev"></div>
-      <div class="gallery__next"></div>
-      <div class="gallery__stream">
-        <div class="gallery__item bg-1"></div>
-        <div class="gallery__item bg-2"></div>
-        <div class="gallery__item bg-3"></div>
-        <div class="gallery__item bg-4"></div>
-        <div class="gallery__item bg-5"></div>
+  <body>
+    <div class="card-container">
+      <div class="card">
+        <img src="cardback.png" />
+      </div>
+      <div class="card">
+        <img src="cardback.png" />
+      </div>
+      <div class="card">
+        <img src="cardback.png" />
+      </div>
+      <div class="card">
+        <img src="cardback.png" />
+      </div>
+      <div class="card">
+        <img src="cardback.png" />
       </div>
     </div>
   </body>
