--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -12,19 +12,12 @@
   <body>
     <div class="card-container">
       <div class="card">
-        <img src="cardback.png" />
-      </div>
-      <div class="card">
-        <img src="cardback.png" />
-      </div>
-      <div class="card">
-        <img src="cardback.png" />
-      </div>
-      <div class="card">
-        <img src="cardback.png" />
-      </div>
-      <div class="card">
-        <img src="cardback.png" />
+        <div class="card-front">
+          <img src="cardback.png" />
+        </div>
+        <div class="card-back">
+          <img src="card_banana.png" />
+        </div>
       </div>
     </div>
   </body>
