--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -13,46 +13,46 @@
     <div class="card-container">
       <div class="card">
         <div class="card-front">
-          <img src="cardback.png" />
+          <img src="cardback.png" draggable="false" />
         </div>
         <div class="card-back">
-          <img src="card_banana.png" />
+          <img src="card_banana.png" draggable="false" />
         </div>
       </div>
 
       <div class="card">
         <div class="card-front">
-          <img src="cardback.png" />
+          <img src="cardback.png" draggable="false" />
         </div>
         <div class="card-back">
-          <img src="card_burger.png" />
+          <img src="card_burger.png" draggable="false" />
         </div>
       </div>
 
       <div class="card">
         <div class="card-front">
-          <img src="cardback.png" />
+          <img src="cardback.png" draggable="false" />
         </div>
         <div class="card-back">
-          <img src="card_candy.png" />
+          <img src="card_candy.png" draggable="false" />
         </div>
       </div>
 
       <div class="card">
         <div class="card-front">
-          <img src="cardback.png" />
+          <img src="cardback.png" draggable="false" />
         </div>
         <div class="card-back">
-          <img src="card_egg.png" />
+          <img src="card_egg.png" draggable="false" />
         </div>
       </div>
 
       <div class="card">
         <div class="card-front">
-          <img src="cardback.png" />
+          <img src="cardback.png" draggable="false" />
         </div>
         <div class="card-back">
-          <img src="card_mushroom.png" />
+          <img src="card_mushroom.png" draggable="false" />
         </div>
       </div>
     </div>
