--- a/experiments/index.html
+++ b/experiments/index.html
@@ -1,1 +1,56 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
+  </head>
 
+  <body>
+    <div class="row">
+      <div class="column">
+        <div class="card-front">
+          <img src="cardback.png" />
+        </div>
+        <div class="card-back">
+          <img src="card_banana.png" />
+        </div>
+      </div>
+      <div class="column">
+        <div class="card-front">
+          <img src="cardback.png" />
+        </div>
+        <div class="card-back">
+          <img src="card_burger.png" />
+        </div>
+      </div>
+      <div class="column">
+        <div class="card-front">
+          <img src="cardback.png" />
+        </div>
+        <div class="card-back">
+          <img src="card_candy.png" />
+        </div>
+      </div>
+      <div class="column">
+        <div class="card-front">
+          <img src="cardback.png" />
+        </div>
+        <div class="card-back">
+          <img src="card_egg.png" />
+        </div>
+      </div>
+      <div class="column">
+        <div class="card-front">
+          <img src="cardback.png" />
+        </div>
+        <div class="card-back">
+          <img src="card_mushroom.png" />
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
