--- a/experiments/index.html
+++ b/experiments/index.html
@@ -18,7 +18,9 @@
       </div>
 
       <div id="modal" class="modalbox">
-        <img src="card_banana.png" />
+        <div id="modalcard">
+          <img src="card_banana.png" draggable="false" />
+        </div>
         <div class="modal-content">
           <span class="close">&times;</span>
           <h1>The Banana</h1>
