--- a/experiments/index.html
+++ b/experiments/index.html
@@ -3,22 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Fortune Cards</title>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
-
   <body>
     <div class="row">
-      <div class="column" id="cardContainer" onclick="toggleStyle()">
-        <button class="card-front" id="btn">
+      <div class="column">
+        <button class="card-front">
           <img src="cardback.png" />
         </button>
       </div>
 
-      <div id="modal" class="modalbox">
-        <div id="modalcard">
+      <!-- First Modal -->
+      <div class="modalbox" id="modal1">
+        <!-- Content for the first modal -->
+        <div class="modalcard">
           <img src="card_banana.png" draggable="false" />
         </div>
         <div class="modal-content">
@@ -35,25 +36,135 @@
       </div>
 
       <div class="column">
-        <div class="card-front">
+        <button class="card-front">
           <img src="cardback.png" />
+        </button>
+      </div>
+
+      <div class="modalbox" id="modal2">
+        <div class="modalcard">
+          <img src="card_burger.png" draggable="false" />
+        </div>
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <h1>The Burger</h1>
+          <h2>You deserve a treat.</h2>
+          <ul>
+            <li>DESCRIPTION 1</li>
+            <li>DESCRIPTION 2</li>
+            <li>DESCRIPTION 3</li>
+          </ul>
+          <h1>RETURN</h1>
         </div>
       </div>
+
       <div class="column">
-        <div class="card-front">
+        <button class="card-front">
           <img src="cardback.png" />
+        </button>
+      </div>
+
+      <div class="modalbox" id="modal3">
+        <div class="modalcard">
+          <img src="card_mushroom.png" draggable="false" />
+        </div>
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <h1>The Mushroom</h1>
+          <h2>Never a better time to get some sun.</h2>
+          <ul>
+            <li>DESCRIPTION 1</li>
+            <li>DESCRIPTION 2</li>
+            <li>DESCRIPTION 3</li>
+          </ul>
+          <h1>RETURN</h1>
         </div>
       </div>
+
       <div class="column">
-        <div class="card-front">
+        <button class="card-front">
           <img src="cardback.png" />
+        </button>
+      </div>
+
+      <div class="modalbox" id="modal4">
+        <div class="modalcard">
+          <img src="card_candy.png" draggable="false" />
+        </div>
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <h1>The Candy</h1>
+          <h2>Good things are coming!</h2>
+          <ul>
+            <li>DESCRIPTION 1</li>
+            <li>DESCRIPTION 2</li>
+            <li>DESCRIPTION 3</li>
+          </ul>
+          <h1>RETURN</h1>
         </div>
       </div>
+
       <div class="column">
-        <div class="card-front">
+        <button class="card-front">
           <img src="cardback.png" />
+        </button>
+      </div>
+
+      <div class="modalbox" id="modal5">
+        <div class="modalcard">
+          <img src="card_egg.png" draggable="false" />
+        </div>
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <h1>The Egg</h1>
+          <h2>Why does we exist?</h2>
+          <ul>
+            <li>DESCRIPTION 1</li>
+            <li>DESCRIPTION 2</li>
+            <li>DESCRIPTION 3</li>
+          </ul>
+          <h1>RETURN</h1>
         </div>
       </div>
     </div>
   </body>
 </html>
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
+  </head>
+
+  <body>
+    <div class="row">
+      <div class="column" onclick="toggleStyle()">
+        <button class="card-front">
+          <img src="cardback.png" />
+        </button>
+      </div>
+
+      <div class="modalbox">
+        <div class="modalcard">
+          <img src="card_banana.png" draggable="false" />
+        </div>
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <h1>The Banana</h1>
+          <h2>Have you had some fruit today?</h2>
+          <ul>
+            <li>Time to drop what you're doing and grab a piece of fruit!</li>
+            <li>DESCRIPTION 2</li>
+            <li>DESCRIPTION 3</li>
+          </ul>
+          <h1>RETURN</h1>
+        </div>
+      </div>
+    </div>
+  </body>
+</html> -->
